# pbt

./: .gitignore  .pre-commit-config.yaml  DESIGN.md  Makefile  README.md  agents.md  example.py  pyproject.toml  test_incremental.py
.github/workflows/: test.yml
data/.pbt/: state.json
data/logs/: events.parquet
data/output/: daily_summary.parquet  user_events.parquet
example/: add_events.py  partitioned_events.py  process_events.py  raw.csv
example/.pbt/: state.json
src/pbt/: __init__.py  core.py  exceptions.py  extensions.py  meta.py  state.py  utils.py
src/pbt/sinks/: __init__.py  base.py  duckdb.py  local.py  s3.py
src/pbt/sources/: __init__.py  duckdb.py
tests/: test_duckdb_sink.py  test_partitioned_incremental.py  test_s3_sink.py  test_schema_change.py  test_sinks.py  test_sources.py  test_validations.py
