[project]
name = "pbt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "koaning", email = "vincentwarmerdam@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "narwhals>=2.10.2",
    "polars>=1.35.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
