[project]
name = "pbt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "koaning", email = "vincentwarmerdam@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "narwhals>=2.10.2",
    "polars>=1.35.1",
]

[project.optional-dependencies]
dev = [
    "duckdb>=1.0.0",
    "pre-commit>=4.0.1",
    "pyarrow>=15.0.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
